# dio-trading-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  START_APP.bat  nixpacks.toml  pyproject.toml  railway.json
dio_trading_app/: .env.example  Makefile  README.md  _quick_bt.py  nixpacks.toml  railway.backend.json  railway.frontend.json  requirements.txt  run_optimizer.py  run_pipeline.py  start.py
dio_trading_app/backend/: __init__.py  pipeline.py
dio_trading_app/backend/api/: main.py
dio_trading_app/backend/core/: config.py  database.py
dio_trading_app/backend/modules/alerts/: scheduler.py
dio_trading_app/backend/modules/backtesting/: engine.py  optimizer.py
dio_trading_app/backend/modules/data_ingestion/: downloader.py
dio_trading_app/data/cache/: EURUSDX_15m_89153c2e.parquet  EURUSDX_1d_92f2016d.parquet  EURUSDX_1h_2e3147a7.parquet  EURUSDX_1mo_73094ea5.parquet  EURUSDX_1wk_ee00414e.parquet  EURUSDX_4h_4a62f93d.parquet  GBPUSDX_15m_a7eb3820.parquet  GBPUSDX_1d_ca59c0b5.parquet  GBPUSDX_1h_40c2da7a.parquet  GBPUSDX_4h_62e9dc5c.parquet  GCF_15m_bdb9cc5f.parquet  GCF_1d_1efcec65.parquet  GCF_1h_5feb4c27.parquet  GCF_4h_9f04d7b8.parquet  JPYX_15m_0d3e4ea9.parquet  JPYX_1d_93f88c43.parquet  JPYX_1h_f204ec2b.parquet  JPYX_4h_e82bc174.parquet
dio_trading_app/frontend/: app.py  app_backup.py  app_clean.py
dio_trading_app/reports/optimization/: optimization_results.csv  optimization_results.json
dio_trading_app/tests/: test_suite.py
dio_trading_app/tools/: daily_retrain.py
tests/: test_health.py
(+8 files in other folders)
