[project]
name = "dio-trading-app"
version = "1.0.0"
description = "EUR/USD market analysis, signal generation, backtesting, and probability-based prediction platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "streamlit>=1.35.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    # Data
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "yfinance>=0.2.40",
    "requests>=2.32.2",
    "httpx>=0.27.0",
    # Technical Analysis
    "ta>=0.11.0",
    # ML / Stats
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.2",
    "xgboost>=2.0.3",
    "scipy>=1.13.0",
    "joblib>=1.4.2",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "aiosqlite>=0.20.0",
    # Visualization
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
    # Alerts / Scheduler
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    # Logging & Utilities
    "loguru>=0.7.2",
    "rich>=13.7.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.11.5",
]

[project.scripts]
dio-api = "backend.api.main:app"
dio-pipeline = "backend.pipeline:run_full_pipeline"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["dio_trading_app"]
include = ["backend*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py311"
